# ThirdEye

./: .gitignore  .replit  app.py  arduino_camera_server.py  arduino_upload_example.txt  index.html  pyproject.toml  replit.md
ThirdEye_Arduino_Camera/: CameraUploadsPicture.ino  README.txt
attached_assets/arduino_code/: SETUP_INSTRUCTIONS.txt
attached_assets/arduino_code/CameraUploadsPicture/: CameraUploadsPicture.ino  index_html.h
static/: script.js  style.css
